--- a/configs/simpledjango_nginx.conf
+++ b/configs/simpledjango_nginx.conf
@@ -1,11 +1,11 @@
 server {
    # redirect www to non-www
-   server_name www.tilek.ga;
-   return 301 $scheme://tilek.ga$request_uri;
+   server_name www.toktogul.tk;
+   return 301 $scheme://toktogul.tk$request_uri;
 }
 
 server {
-   server_name tilek.ga 167.99.130.56;
+   server_name toktogul.tk 207.154.208.82;
    charset utf-8;
    client_max_body_size 15M;
 
